Изменил структуру scss и css файлов

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
-  <link href="css/main.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 </head>
 
 <body>
